--- a/MusicSalesApp/wwwroot/md_app.css
+++ b/MusicSalesApp/wwwroot/md_app.css
@@ -2,7 +2,7 @@
 @media (max-width: 992px) {
     /* AdminSongManagement container */
     #grid-container {
-        width: calc(100vw - 12rem);
+        width: 100%;
         height: calc(100vh - 8rem);
     }
 
